[REFACTOR] test Repository