@@ -4,44 +4,47 @@ import id.ac.ui.cs.advprog.course.model.MataKuliah;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-import java.util.List;
-import java.util.Optional;
+import java.util.*;
 
 import static org.junit.jupiter.api.Assertions.*;
 
 /**
- * Unit‑test untuk {@link InMemoryMataKuliahRepository} – versi baru
- * yang memakai return value pada save/update.
+ * Unit‑test CRUD untuk {@link InMemoryMataKuliahRepository}.
  */
 class InMemoryMataKuliahRepositoryTest {
 
     private MataKuliahRepository repo;
 
+    /* ---------- Helper ---------- */
+    private MataKuliah mk(String kode, String nama, int sks) {
+        return new MataKuliah(kode, nama, "Desc", sks, new HashSet<>());
+    }
+
     @BeforeEach
     void setUp() {
-        repo = new InMemoryMataKuliahRepository();   // @Primary tak berpengaruh di unit‑test
+        repo = new InMemoryMataKuliahRepository();   // profile tidak berpengaruh di unit‑test
     }
 
     /* ---------- CREATE & FINDALL ---------- */
     @Test
     void save_shouldStoreEntityAndFindAllReturnList() {
-        MataKuliah mk = new MataKuliah("IF1234", "Algoritma", "Desc", 3);
+        MataKuliah matkul = mk("IF1234", "Algoritma", 3);
 
-        MataKuliah saved = repo.save(mk);            // kini mengembalikan entity
-        assertSame(mk, saved);                       // referensi sama
+        MataKuliah saved = repo.save(matkul);
+        assertSame(matkul, saved);
 
         List<MataKuliah> all = repo.findAll();
         assertEquals(1, all.size());
-        assertEquals("IF1234", all.get(0).getKode());
+        assertEquals("IF1234", all.getFirst().getKode());
     }
 
     /* ---------- DUPLICATE SAVE ---------- */
     @Test
     void saveDuplicate_shouldThrowException() {
-        repo.save(new MataKuliah("IF1234", "Algoritma", "Desc", 3));
+        repo.save(mk("IF1234", "Algoritma", 3));
 
-        RuntimeException ex = assertThrows(RuntimeException.class, () ->
-                repo.save(new MataKuliah("IF1234", "Struktur Data", "Desc", 4)));
+        RuntimeException ex = assertThrows(RuntimeException.class,
+                () -> repo.save(mk("IF1234", "Struktur Data", 4)));
 
         assertTrue(ex.getMessage().contains("Kode mata kuliah sudah terdaftar"));
     }
@@ -49,7 +52,7 @@ class InMemoryMataKuliahRepositoryTest {
     /* ---------- FINDBYKODE ---------- */
     @Test
     void findByKode_shouldReturnOptional() {
-        repo.save(new MataKuliah("IF1234", "Algoritma", "Desc", 3));
+        repo.save(mk("IF1234", "Algoritma", 3));
 
         Optional<MataKuliah> found = repo.findByKode("IF1234");
         assertTrue(found.isPresent());
@@ -59,29 +62,31 @@ class InMemoryMataKuliahRepositoryTest {
     /* ---------- UPDATE EXISTING ---------- */
     @Test
     void updateExisting_shouldReplaceData() {
-        MataKuliah mk = new MataKuliah("IF1234", "Algoritma", "Desc", 3);
-        repo.save(mk);
+        MataKuliah matkul = mk("IF1234", "Algoritma", 3);
+        repo.save(matkul);
 
-        mk.setNama("Algoritma Updated");
-        MataKuliah updated = repo.update(mk);        // return entity
+        matkul.setNama("Algoritma Updated");
+        MataKuliah updated = repo.update(matkul);
 
-        assertEquals("Algoritma Updated", updated.getNama());
-        assertEquals("Algoritma Updated", repo.findByKode("IF1234").get().getNama());
+        assertEquals("Algoritma Updated", updated.getNama());
+        assertEquals("Algoritma Updated", repo.findByKode("IF1234").get().getNama());
     }
 
     /* ---------- UPDATE NON‑EXISTENT ---------- */
     @Test
     void updateNonExistent_shouldThrowException() {
-        MataKuliah mk = new MataKuliah("IF1234", "Algoritma", "Desc", 3);
+        MataKuliah matkul = mk("IF9999", "Non‑Exist", 2);
 
-        RuntimeException ex = assertThrows(RuntimeException.class, () -> repo.update(mk));
+        RuntimeException ex = assertThrows(RuntimeException.class,
+                () -> repo.update(matkul));
+
         assertTrue(ex.getMessage().contains("Mata kuliah tidak ditemukan"));
     }
 
     /* ---------- DELETE ---------- */
     @Test
     void deleteByKode_shouldRemoveEntity() {
-        repo.save(new MataKuliah("IF1234", "Algoritma", "Desc", 3));
+        repo.save(mk("IF1234", "Algoritma", 3));
 
         repo.deleteByKode("IF1234");
         assertFalse(repo.findByKode("IF1234").isPresent());
